tests/sksl/errors/golden/BitShiftFloat.glsl

void main() {
    float x = 6.0;
    x >>= 1.0;
}
